# mcp-n8n

./: .env.example  Dockerfile  README.md  pyproject.toml
src/mcp_n8n/: __init__.py  client.py  config.py  langchain_tools.py  server.py
src/mcp_n8n/operations/: __init__.py  credentials.py  executions.py  misc.py  tags.py  workflows.py
tests/: test_langchain_tools.py  test_operations.py
