[project]
name = "mcp-n8n"
version = "0.1.0"
description = "n8n workflow automation API as Python library, LangChain tools, and MCP server"
authors = [{name = "Landry Zetam"}]
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = ["requests>=2.31.0", "pydantic-settings>=2.0"]

[project.optional-dependencies]
mcp = ["fastmcp>=0.1.0"]
langchain = ["langchain-core>=0.2.0", "pydantic>=2.0.0"]
all = ["fastmcp>=0.1.0", "langchain-core>=0.2.0", "pydantic>=2.0.0"]
dev = [
    "pytest>=8.0",
    "responses>=0.25.0",
    "pytest-cov",
]

[project.urls]
Homepage = "https://github.com/lyzetam/mcp-n8n"
Repository = "https://github.com/lyzetam/mcp-n8n"

[project.scripts]
mcp-n8n = "mcp_n8n.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_n8n"]

[tool.pytest.ini_options]
testpaths = ["tests"]
